# Undergraduate-Graduation-Project

./: record.md  需要了解硬件信息.docx
cam_modify/: bridge_utils.py  run_node.py  seeker_bridge.launch
inference/: run.py
inference/my_pretrain_src_30/: train_r2r.py
inference/run_pt/: mix_model_config_dep.json  mix_pretrain_habitat_my_pretrain_30.json  r2r_model_config_dep.json  r2r_pretrain_habitat.json  r2r_pretrain_habitat_origin.json  run_mix.bash  run_mix_server.bash  run_r2r_30.bash  (+2 more)
ros_inference/: Environment_Setting_Guide.txt  environment.yaml  readme.md  record.md  run_robot.bash  run_ros.py
src/seeker/: CMakeLists.txt  README.en.md  README.md  nodelet_plugins.xml  package.xml
src/seeker/3dfile/: seeker-omni-d.stp
src/seeker/cmake/: ROS1.cmake  ROS2.cmake
src/seeker/config/seeker_omni_depth/: kalibr_cam_chain.yaml
src/seeker/deb/: ros-noetic-image-undistort_0.0.0-0focal_amd64.deb  ros-noetic-image-undistort_0.0.0-0focal_arm64.deb
src/seeker/gui/: seeker.perspective  undistort.perspective
src/seeker/include/: seeker.hpp  seeker_type.hpp
src/seeker/launch/nodelet/: 1seeker_nodelet.launch  2concat_nodelet.launch  3undistort_nodelet.launch  4depth_image.launch  5point_cloud.launch  seeker_bridge.launch
src/seeker/launch/ros2/: 1seeker.launch.py
src/seeker/pps/: .gitignore  Makefile  pps_s.c  pps_s_main.c
src/seeker/script/: 1get_kalibr_info.py  2depth_measure.py  3_get_undistort_kalibr_info.py
src/seeker/src/: seeker_node.cpp  seeker_nodelet.cpp  seeker_ros2.cpp
src/seeker/update/seeker_omni_depth_update/: 差分升级包正式版本V3-解决黑色块问题和彩色噪点问题.pkg
(+92 files in other folders)
